<resources>
    <string name="app_name">Reffy</string>
    <string name="welcome">Welcome</string>

    <string name="instructions">To search for a book enter the ISBN below and click search or click scan to scan the barcode</string>
    <string name="search">Search</string>
    <string name="scan">Scan barcode</string>
    <string name="generate">Generate Reference</string>

    <string name="title_activity_projects">projects</string>
    <string name="about_headline">About Reffy</string>
    <string name="about_text">Reffy is a mobile application that provides users with ease when wanting to reference a book. They can simply scan the books barcode that you wish to reference. Once scanned the application will retrieve the parts of the information needed to form your reference. Here you can edit the fields as you feel appropriate especially the date accessed if they day you are scanning on is not the day you are accessing it.</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_scanner">scanner</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="no_network">Please check your network connection and try again.</string>
    <string name="no_results">No Results Found</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home</string>
    <string name="feedbackTitle">Please complete the form below to send your feedback</string>
    <string name="feedbackName">Name</string>
    <string name="feedbackEmail">Email</string>
    <string name="feedbackRating">Rating</string>

    <string-array name="feedbackrating">
        <item>@string/rating1</item>
        <item>@string/rating2</item>
        <item>@string/rating3</item>
        <item>@string/rating4</item>
    </string-array>

    <string name="rating1">Excellent</string>
    <string name="rating2">Good</string>
    <string name="rating3">Poor</string>
    <string name="rating4">Very poor</string>


    <string name="feedbackMessage">Message</string>
    <string name="feedbackButton">Send Feedback</string>

    <string name="emptyList">You do not have any projects at the minute. Click the plus sign at the bottom to get started.</string>

    <string name="largetext">Large font sizes</string>


    <string name="black">Black</string>

    <string name="blue">Blue</string>

    <string name="pick">Pick Your theme</string>

    <string name="textfile">Export as text file</string>
    <string name="expoemail">Export to email</string>
    <string name="savetoProject">Save to project</string>

    <string name="help">Need help?</string>
    <string name="helpSubtitle">Look no further this guide will help you step by step</string>

</resources>
